tests/ui/duplicate-transparent.stderr
error: duplicate #[display(transparent)] attribute
 --> tests/ui/duplicate-transparent.rs:5:1
  |
5 | #[display(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
